--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   </div>
 
-    //    Services Section (Cards)    //
+    <!--Services Section (Cards)-->
     <div class="services">
       <h1></h1>
       <div class="services__container">
